jagadeeshvpc.json
{
    "AWSTemplateFormatVersion" : "2010-09-09",
    "Parameters":{

"publicAZ": {
    "Description": "publicAZ",
    "Type": "AWS::EC2::AvailabilityZone::Name"
},

"privateAZ": {
    "Description": "privateAZ",
    "Type": "AWS::EC2::AvailabilityZone::Name"
}
 },
    "Resources":{
       
       "myVPC": {
         "Type": "AWS::EC2::VPC",
         "Properties": {
           "CidrBlock": "192.168.0.0/22"
         }
       },
       
       "publicsubnet": {
         "Type": "AWS::EC2::Subnet",
         "Properties": {
           "AvailabilityZone": 
           { "Ref": "publicAZ" }
           ,
           "VpcId": 
           { "Ref": "myVPC" }
           ,
           "CidrBlock": "192.168.1.0/24"
         }
       },
       
       "publicrouteTable": {
         "Type": "AWS::EC2::RouteTable",
         "Properties": {
           "VpcId": 
           { "Ref": "myVPC" }
          
         }
       },
       
       
       "publicrouteTableAssoc": {
         "Type": "AWS::EC2::SubnetRouteTableAssociation",
         "Properties": {
           "SubnetId": 
           { "Ref": "publicsubnet" }
           ,
           "RouteTableId": 
           { "Ref": "publicrouteTable" }
           
         }
       },
       
       "myIGW": {
         "Type": "AWS::EC2::InternetGateway"
       },
       "AttachGateway": {
         "Type": "AWS::EC2::VPCGatewayAttachment",
         "Properties": {
           "VpcId": 
           { "Ref": "myVPC" }
           ,
           "InternetGatewayId": { "Ref": "myIGW" }
         }
       },
       
       "publicroute": {
         "Type": "AWS::EC2::Route",
         "Properties": {
           "RouteTableId":
           { "Ref": "publicrouteTable" }
            ,
           "DestinationCidrBlock": "0.0.0.0/0",
           "GatewayId": 
           { "Ref": "myIGW" }
           
         }
       },
       
       "privatesubnet": {
         "Type": "AWS::EC2::Subnet",
         "Properties": {
           "AvailabilityZone": 
           { "Ref": "privateAZ" }
           ,
           "VpcId": 
           { "Ref": "myVPC" }
           ,
           "CidrBlock": "192.168.2.0/24"
         }
       },
       
       "privaterouteTable": {
         "Type": "AWS::EC2::RouteTable",
         "Properties": {
           "VpcId": 
           { "Ref": "myVPC" }
           
         }
       },
       
       "privaterouteTableAssoc": {
         "Type": "AWS::EC2::SubnetRouteTableAssociation",
         "Properties": {
           "SubnetId": 
           { "Ref": "privatesubnet" }
           ,
           "RouteTableId": 
           { "Ref": "privaterouteTable" }
           
         }
       },
       "myEIP" : {
        "Type" : "AWS::EC2::EIP"
     },
     "myNAT" : {
        "Type" : "AWS::EC2::NatGateway",
        "Properties" : {
           "AllocationId" : { 
               "Fn::GetAtt" : ["myEIP", "AllocationId"] 
           },
           "SubnetId" : { 
               "Ref" : "publicsubnet" 
           }
          }
     },
     
     "privateroute": {
       "Type": "AWS::EC2::Route",
       "Properties": {
         "RouteTableId": 
         { "Ref": "privaterouteTable" }
         ,
         "DestinationCidrBlock": "0.0.0.0/0",
         "NatGatewayId": 
         { "Ref": "myNAT" }
         
       }
     }
      },
   "Outputs":{
       
       "myVPCID" : {
         "Value" : 
         { "Ref": "myVPC" }
         
       },
       
       "publicsubnetID" : {
         "Value" : 
         { "Ref": "publicsubnet" }
         
       }
        }
    }
